src/test/deca/syntax/invalid/rien_a_droite_du_egal.deca
// Description:
//    on ne met rien à droite du égal
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : "no viable alternative at input ';'"

{ int x =  ;}
